--- a/training.html
+++ b/training.html
@@ -47,13 +47,13 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/1.PNG" class="d-block w-100">
+                        <img src="images/1.png" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                      <img src="images/2.PNG" class="d-block w-100">
+                      <img src="images/2.png" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                      <img src="images/3.PNG" class="d-block w-100">
+                      <img src="images/3.png" class="d-block w-100">
                     </div>
                   </div>
                 </div>
