--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <div class="container">
               <div class="row">
                 <div class="col-12">
-                  <h1 class="display-3"; align="center";>Our Next Show</h1>
+                  <h1 class="display-3 nextShowTitle"; align="center";>Our Next Show</h1>
                 </div>
                 <div class="col-12"></div>
-                  <img src="images/Poster.png"; class="rounded mx-auto img-fluid"; style="width:max-content;">
+                  <img src="images/Poster.png"; class="rounded mx-auto img-fluid nextShowBanner"; style="width:max-content;">
                 </div>
                 <div class="col-xs-12"; align="center">
                   <a href="https://www.facebook.com/ipwaustralia/" class="fa fa-facebook"></a>
